--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,8 @@
 [defaults]
+
+roles_path = /runner/project/roles:/runner/roles  # :/home/a-dv18/ansible/repos/Ansible-Development/roles
+# inventory = /projects/ansible-development/inventory
+
 # (boolean) By default Ansible will issue a warning when received from a task action (module or action plugin)
 # These warnings can be silenced by adjusting this setting to False.
 ;action_warnings=True
